--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-inline-edit",
+  "name": "react-inline-edit-input",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
