--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-inline-edit-input",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
@@ -29,23 +29,23 @@
   "homepage": "https://github.com/adalbertoteixeira/react-inline-edit",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-jest": "^22.1.0",
+    "babel-jest": "^22.4.4",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.16.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-react": "^7.6.1",
-    "jest": "^22.1.4",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-test-renderer": "^16.2.0"
+    "eslint-plugin-react": "^7.11.1",
+    "jest": "^22.4.4",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-test-renderer": "^16.5.2"
   },
   "dependencies": {
-    "prop-types": "^15.6.0"
+    "prop-types": "^15.6.2"
   },
   "peerDependencies": {},
   "jest": {
@@ -53,6 +53,7 @@
     "collectCoverage": true,
     "collectCoverageFrom": [
       "src/*.{js,jsx}"
-    ]
+    ],
+    "testURL": "http://localhost/"
   }
 }
