--- a/package.json
+++ b/package.json
@@ -28,23 +28,23 @@
   },
   "homepage": "https://github.com/adalbertoteixeira/react-inline-edit",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^22.4.4",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "enzyme": "^3.6.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "eslint": "^4.19.1",
-    "eslint-config-google": "^0.9.1",
-    "eslint-plugin-react": "^7.11.1",
-    "jest": "^22.4.4",
+    "eslint": "^5.13.0",
+    "eslint-config-google": "^0.12.0",
+    "eslint-plugin-react": "^7.12.4",
+    "jest": "^24.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-test-renderer": "^16.5.2"
   },
   "dependencies": {
+    "prettier": "^1.16.3",
     "prop-types": "^15.6.2"
   },
   "peerDependencies": {},
